[WebClient] Use browserify for dependencies

--- a/web-client/src/index.html
+++ b/web-client/src/index.html
@@ -7,34 +7,5 @@
 <body ng-app="sfuber-movies">
 <awesome-message></awesome-message>
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-<script type="text/javascript">
-    (function () {
-        angular.module('sfuber-movies', [])
-                .service('AwesomeMessageService', function ($http, $q) {
-                    var serviceUrl = 'http://localhost:5000';
-
-                    this.getMsg = function () {
-                        var deferred = $q.defer();
-                        $http.get(serviceUrl + '/awesome-message').then(function (resp) {
-                            deferred.resolve(resp.data.message);
-                        });
-                        return deferred.promise;
-                    }
-                })
-                .directive('awesomeMessage', function () {
-                    return {
-                        restrict: 'E',
-                        template: '{{vm.msg}}',
-                        controllerAs: 'vm',
-                        controller: function (AwesomeMessageService) {
-                            var vm = this;
-                            AwesomeMessageService.getMsg().then(function (msg) {
-                                vm.msg = msg;
-                            });
-                        }
-                    }
-                });
-    })();
-</script>
+<script src="bundle.js"></script>
 </html>
