Implement feature viewMovieLocations with service backed by csv (no db yet)

--- a/web-client/src/index.html
+++ b/web-client/src/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>SFuber Movies</title>
+    <style>
+        body { margin: 0; padding: 0; }
+        .angular-google-map-container { height: 100vh; }
+    </style>
 </head>
 <body ng-app="sfuber-movies">
-<awesome-message></awesome-message>
+<movies-map></movies-map>
 </body>
 <script src="bundle.js"></script>
 </html>
